# aml

./: .gitignore  README.md  actv  add-ld-gi-pathes.sh  add-module.sh  index.html  meson.build  meson.options
.github/workflows/: documentation.yml
Aml/: AmlBasicTypes.BasicType.BasicType.html  AmlBasicTypes.BasicType.html  AmlBasicTypes.Bool.Bool.create.html  AmlBasicTypes.Bool.Bool.html  AmlBasicTypes.Bool.copy.html  AmlBasicTypes.Bool.get_val.html  AmlBasicTypes.Bool.html  AmlBasicTypes.Bool.set_val.html  AmlBasicTypes.Float64.Float64.create.html  AmlBasicTypes.Float64.Float64.html  AmlBasicTypes.Float64.copy.html  AmlBasicTypes.Float64.get_val.html  AmlBasicTypes.Float64.html  AmlBasicTypes.Float64.set_val.html  AmlBasicTypes.Int64.Int64.create.html  AmlBasicTypes.Int64.Int64.html  AmlBasicTypes.Int64.copy.html  AmlBasicTypes.Int64.get_val.html  AmlBasicTypes.Int64.html  AmlBasicTypes.Int64.set_val.html  AmlBasicTypes.String.String.create.html  AmlBasicTypes.String.String.html  AmlBasicTypes.String.copy.html  AmlBasicTypes.String.get_val.html  AmlBasicTypes.String.html  AmlBasicTypes.String.set_val.html  AmlBasicTypes.html  AmlBox.Box.Box.html  AmlBox.Box.contains_point.html  AmlBox.Box.get_volume.html  AmlBox.Box.html  AmlBox.Box.map_periodic.html  AmlBox.ParallelepipedBox.ParallelepipedBox.create.html  AmlBox.ParallelepipedBox.ParallelepipedBox.html  AmlBox.ParallelepipedBox.contains_point.html  AmlBox.ParallelepipedBox.copy.html  AmlBox.ParallelepipedBox.get_boundaries.html  AmlBox.ParallelepipedBox.get_edge.html  AmlBox.ParallelepipedBox.get_origin.html  AmlBox.ParallelepipedBox.get_volume.html  (+666 more)
aal/: boolhelper.vala  io.vala
aal/data/: atom.vala  atoms.vala  box.vala  frame.vala
aal/math/: matrix.vala  vector.vala
aal/parse/: inputhelper.vala  lammpstextdumpparser.vala  parser.vala
aml/: errors.vala  io.vala
aml/basictypes/: meson.build
aml/basictypes/test/: meson.build
aml/box/: meson.build
aml/box/src/: box.vala  parallelepipedbox.vala
aml/box/test/: meson.build
aml/box/test/parallelepipedbox/: copy.vala  create.vala  invalidargs.vala  volume.vala
aml/core/: meson.build
aml/core/src/: action.vala  datacollection.vala  datahashtable.vala  dataobject.vala  object.vala
aml/core/src/idparser/: idparser.vala  strsepidparser.vala
aml/core/test/: meson.build
aml/core/test/datacollection/: copy.vala  delerr.vala  implicitset.vala  memorytest.vala  meson.build  nestedset.vala  nestedset2.vala  nestedset3.vala  regextest.vala  setafterdel.vala  setremove.vala  validid.vala
aml/core/test/datahashtable/: contains.vala  copy.vala  create.vala  delerr.vala  doubleassign.vala  doubleset.vala  geterr.vala  implicitselfset.vala  meson.build  nestedcontains.vala  nesteddel.vala  nestedget.vala  nestedset.vala  nestedseterr.vala  selfset.vala  set.vala  setafterdel.vala  setremove.vala
aml/core/test/node/: copy.vala  create.vala  delerr.vala  doubleassign.vala  doubleset.vala  geterr.vala  implicitset.vala  memorytest.vala  meson.build  nestedset.vala  selfset.vala  set.vala  setafterdel.vala  setremove.vala  unrefdoubleassign.vala
aml/core/test/strsepidparser/: create.vala  meson.build  strsep.vala
aml/data/: atom.vala  atoms.vala  box.vala  frame.vala
aml/lammpsio/: meson.build
aml/lammpsio/src/: binarydumpreader.vala  binarydumpwriter.vala  datacollectionhelper.vala  dumpreader.vala  dumpwriter.vala  inputhelper.vala  outputhelper.vala  presets.vala  readerparams.vala  writerparams.vala
aml/math/: matrix.vala  meson.build  vector.vala
aml/math/src/linalg/: matrix.vala  vector.vala
aml/math/test/: meson.build
aml/math/test/matrix/: copy.vala  createarray.vala  creategsl.vala  createsized.vala  meson.build  setarrerr.vala
aml/math/test/vector/: copy.vala  createarray.vala  creategsl.vala  createsized.vala  meson.build  setarrerr.vala
aml/parse/: inputhelper.vala  lammpstextdumpparser.vala  parser.vala
aml/particle/: meson.build
aml/particles/: meson.build
aml/particles/src/: particles.vala
aml/particles/src/perparticle/: bool.vala  float64.vala  int64.vala  string.vala
aml/particles/test/: meson.build
aml/particles/test/perparticle/: meson.build
bindings/javascript/: package-lock.json  package.json  test.js
doc/: meson.build
docs/: index.html
docs/aml-0.1/: Aml.Arrayable.get_arr.html  Aml.Arrayable.html  Aml.Arrayable.set_arr.html  Aml.Atom.Atom.empty.html  Aml.Atom.Atom.html  Aml.Atom.copy.html  Aml.Atom.del_item.html  Aml.Atom.del_prop.html  Aml.Atom.get_ids.html  Aml.Atom.get_item.html  Aml.Atom.get_keys.html  Aml.Atom.get_prop.html  Aml.Atom.has_item.html  Aml.Atom.has_prop.html  Aml.Atom.html  Aml.Atom.keys.html  Aml.Atom.set_item.html  Aml.Atom.set_prop.html  Aml.Atoms.Atoms.empty.html  Aml.Atoms.Atoms.html  Aml.Atoms.Atoms.sized.html  Aml.Atoms.copy.html  Aml.Atoms.del_item.html  Aml.Atoms.del_prop.html  Aml.Atoms.get_ids.html  Aml.Atoms.get_item.html  Aml.Atoms.get_keys.html  Aml.Atoms.get_prop.html  Aml.Atoms.get_size.html  Aml.Atoms.get_val.html  Aml.Atoms.has_item.html  Aml.Atoms.has_prop.html  Aml.Atoms.html  Aml.Atoms.insert_first.html  Aml.Atoms.insert_last.html  Aml.Atoms.insert_val.html  Aml.Atoms.keys.html  Aml.Atoms.remove_first.html  Aml.Atoms.remove_last.html  Aml.Atoms.remove_val.html  (+218 more)
scripts/: add-ld-gi-pathes.sh  build-doc.sh
subprojects/basictypes/: meson.build
subprojects/box/: meson.build
subprojects/core/: meson.build
subprojects/lammpsio/: meson.build
subprojects/lammpsio/src/: binarydumpreader.vala  binarydumpwriter.vala  dumpreader.vala  dumpwriter.vala  inputhelper.vala  outputhelper.vala  readerparams.vala  writerparams.vala
subprojects/math/: meson.build  meson.options
subprojects/math/src/: matrix3.vala  vector3.vala
subprojects/math/test/: meson.build
subprojects/math/test/matrix/: createarray.vala  createsized.vala  det.vala  indexerr.vala  isdiagonal.vala  setarray.vala
subprojects/math/test/vector/: createsized.vala  indexerr.vala  meson.build  setarray.vala
subprojects/particles/: meson.build  meson.options
templates/: meson.build  meson.options
(+86 files in other folders)
