tests += {
    'Regex': files('regextest.vala'),
    'DataCollectionCreate': files('create.vala'),
    'DataCollectionValidId': files('validid.vala'),
    'DataCollectionCopy': files('copy.vala'),
    'DataCollectionDeleteError': files('delerr.vala'),
    'DataObjectDoubleAssignError': files('doubleassign.vala'),
    'DataObjectUnrefDoubleAssignError': files('unrefdoubleassign.vala'),
    'DataCollectionDoubleSet': files('doubleset.vala'),
    'DataCollectionGetError': files('geterr.vala'),
    'DataCollectionNestedSet': files('nestedset.vala'),
    'DataCollectionNestedSet2': files('nestedset2.vala'),
    'DataCollectionSelfSet': files('selfset.vala'),
    'DataCollectionSet': files('set.vala'),
    'DataCollectionImplicitSet': files('implicitset.vala'),
    'DataCollectionSetAfterDel': files('setafterdel.vala'),
    'DataCollectionSetRemove': files('setremove.vala'),
    'DataCollectionMemoryTest': files('memorytest.vala'),
}
