tests += {
    'DataHashTableCreate': files('create.vala'),
    'DataHashTableSet': files('set.vala'),
    'DataHashTableSetRemove': files('setremove.vala'),
    'DataHashTableSelfSet': files('selfset.vala'),
    'DataHashTableImplicitSelfSet': files('implicitselfset.vala'),
    'DataHashTableDoubleSet': files('doubleset.vala'),
    'DataHashTableSetAfterDel': files('setafterdel.vala'),
    'DataHashTableCopy': files('copy.vala'),
    'DataHashTableGetException': files('geterr.vala'),
    'DataHashTableDelException': files('delerr.vala'),
    'DataHashTableContains': files('contains.vala'),
    'DataHashTableNestedContains': files('nestedcontains.vala'),
    'DataHashTableNestedGet': files('nestedget.vala'),
    'DataHashTableNestedSet': files('nestedset.vala'),
    'DataHashTableNestedDel': files('nesteddel.vala'),
    'DataHashTableNestedSetException': files('nestedseterr.vala'),
}
