tests += {
    'DataHashTableCreate': files('create.vala'),
    'DataHashTableSet': files('set.vala'),
    'DataHashTableSetRemove': files('setremove.vala'),
    'DataHashTableSelfSet': files('selfset.vala'),
    'DataHashTableDoubleSet': files('doubleset.vala'),
    'DataHashTableSetAfterDel': files('setafterdel.vala'),
    'DataHashTableCopy': files('copy.vala'),
    'DataHashTableGetException': files('geterr.vala'),
    'DataHashTableDelException': files('delerr.vala'),
    'DataHashTableNestedGet': files('nestedget.vala'),
    'DataHashTableNestedSet': files('nestedset.vala'),
    'DataHashTableNestedDel': files('nesteddel.vala'),
    'DataHashTableNestedSetException': files('nestedseterr.vala'),
    'DataHashTableDoubleAssign': files('doubleassign.vala'),
}
