tests += {
    'MatrixCreateSized': files('createsized.vala'),
    'MatrixCreateGsl': files('creategsl.vala'),
    'MatrixCreateArray': files('createarray.vala'),
    'MatrixDet': files('det.vala'),
    'MatrixSetArray': files('setarray.vala'),
    'MatrixCopy': files('copy.vala'),
    'MatrixIndexError': files('indexerr.vala'),
    'MatrixSetArrError': files('setarrerr.vala'),
    'MatrixIsDiagonal': files('isdiagonal.vala'),
}
